공공데이터

--- a/SpMVC-100-GoData/.project
+++ b/SpMVC-100-GoData/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SpMVC-020-Memo-01</name>
+	<name>SpMVC-100-GoData</name>
 	<comment></comment>
 	<projects>
 	</projects>
